<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".LoginActivity">
    <!-- Login progress -->

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="8dp" style="?android:attr/progressBarStyleLarge"
        android:id="@+id/login_progress"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/login_form">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/email_login_form">
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <AutoCompleteTextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/email"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/prompt_id"/>
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/password"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeActionId="6"/>
</android.support.design.widget.TextInputLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent" style="?android:textAppearanceSmall"
        android:id="@+id/email_sign_in_button"
        android:textStyle="bold"
        android:text="@string/action_sign_in"
        android:layout_marginTop="16dp"/>
</LinearLayout>
</ScrollView>
</LinearLayout>