<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent" app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolbar"/>

    <android.support.design.widget.TabLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tabs">
    <android.support.design.widget.TabItem
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tabItem"
        android:text="@string/tab_text_1"/>
    <android.support.design.widget.TabItem
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tabItem2"
        android:text="@string/tab_text_2"/>
    <android.support.design.widget.TabItem
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tabItem3"
        android:text="@string/tab_text_3"/>

</android.support.design.widget.TabLayout>
</android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager
        android:layout_height="match_parent" 
        android:layout_width="match_parent"
        android:id="@+id/container" app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fab" app:srcCompat="@android:drawable/ic_dialog_email"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|end"/>
</android.support.design.widget.CoordinatorLayout>